<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/menu_goods" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@android:drawable/ic_menu_report_image"
            android:title="@string/menu_reports" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_support"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/menu_support" />
    </group>
</menu>