<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.dyadischevma.smartfintest.ui.GoodsFragment"
        android:label="@string/menu_goods"
        tools:layout="@layout/fragment_goods" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.dyadischevma.smartfintest.ui.GoodsFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_goods" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.dyadischevma.smartfintest.ui.GoodsFragment"
        android:label="@string/menu_reports"
        tools:layout="@layout/fragment_goods" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="ru.dyadischevma.smartfintest.ui.GoodsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_goods" />

    <fragment
        android:id="@+id/nav_support"
        android:name="ru.dyadischevma.smartfintest.ui.GoodsFragment"
        android:label="@string/menu_support"
        tools:layout="@layout/fragment_goods" />
</navigation>