<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSelectedText"
    tools:context=".ui.home.receipt.ReceiptFragment">


    <Button
        android:id="@+id/buttonReceiptPay"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:drawableStart="@android:drawable/ic_media_play"
        android:text="@string/receiptPay"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageViewReceiptIcon"
        android:layout_width="131dp"
        android:layout_height="150dp"
        android:src="@drawable/check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <TextView
        android:id="@+id/textViewReceiptLabelNoGoods"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/receiptNoGoods"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textViewReceiptLabelNoGoodsSmall"
        app:layout_constraintStart_toStartOf="@+id/textViewReceiptLabelNoGoodsSmall"
        app:layout_constraintTop_toBottomOf="@+id/imageViewReceiptIcon" />

    <TextView
        android:id="@+id/textViewReceiptLabelNoGoodsSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/receiptNoGoodsSmall"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonReceiptPay"
        app:layout_constraintStart_toStartOf="@+id/buttonReceiptPay"
        app:layout_constraintTop_toBottomOf="@+id/textViewReceiptLabelNoGoods" />

    <TextView
        android:id="@+id/textViewReceiptLabelTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/receiptTotal"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonReceiptPay"
        app:layout_constraintStart_toStartOf="@+id/buttonReceiptPay" />

    <TextView
        android:id="@+id/textViewReceiptCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/currency"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewReceiptLabelTotal"
        app:layout_constraintEnd_toEndOf="@+id/buttonReceiptPay" />

    <TextView
        android:id="@+id/textViewReceiptTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/initReceiptTotalValue"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewReceiptCurrency"
        app:layout_constraintEnd_toStartOf="@+id/textViewReceiptCurrency" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewReceipt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewReceiptLabelTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewReceiptClearAll" />

    <TextView
        android:id="@+id/textViewReceiptCheckNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="#14"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewReceiptClearAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/receiptClearAll"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewReceiptCheckNumber" />

</androidx.constraintlayout.widget.ConstraintLayout>