<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/AppTheme">

    <TextView
        android:id="@+id/textViewReceiptMeasure2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/measureMultiple"
        app:layout_constraintEnd_toStartOf="@+id/textViewReceiptRightPrice"
        app:layout_constraintTop_toTopOf="@+id/textViewLabelCurrency" />

    <TextView
        android:id="@+id/textViewReceiptGoodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewReceiptLabelCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/currency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewReceiptGoodName" />

    <TextView
        android:id="@+id/textViewReceiptTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/textViewReceiptLabelCurrency"
        app:layout_constraintTop_toTopOf="@+id/textViewReceiptGoodName" />

    <TextView
        android:id="@+id/textViewReceiptMeasure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/oneItemMeasureMultiple"
        app:layout_constraintStart_toStartOf="@+id/textViewReceiptGoodName"
        app:layout_constraintTop_toBottomOf="@+id/textViewReceiptGoodName" />

    <TextView
        android:id="@+id/textViewReceiptPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/textViewReceiptMeasure"
        app:layout_constraintTop_toTopOf="@+id/textViewReceiptMeasure" />

    <TextView
        android:id="@+id/textViewLabelCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/currency"
        app:layout_constraintStart_toEndOf="@+id/textViewReceiptPrice"
        app:layout_constraintTop_toTopOf="@+id/textViewReceiptPrice" />

    <TextView
        android:id="@+id/textViewReceipAnotherCurrencyLabal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/currency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewLabelCurrency" />

    <TextView
        android:id="@+id/textViewReceiptRightPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/textViewReceipAnotherCurrencyLabal"
        app:layout_constraintTop_toTopOf="@+id/textViewReceiptMeasure" />

    <TextView
        android:id="@+id/textViewReceiptQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/textViewReceiptMeasure2"
        app:layout_constraintTop_toTopOf="@+id/textViewReceiptPrice" />
</androidx.constraintlayout.widget.ConstraintLayout>